<resources>
    <string name="app_name">ShareEat</string>
    <string name="recipe_image"> recipe description</string>
    <string name="add_photo">Add Photo</string>
    <string name="recipe_image_preview">Recipe Image Preview</string>
    <string name="post">Post</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="what_did_you_cook_today">What did you cook today?</string>
    <string name="recipe_description">Write your recipe here…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meal_description">Meal Description</string>
    <string name="meal_instructions">Instructions</string>
    <string name="tap_to_add_photo">Tap the camera icon to add a photo</string>
    <string name="search_icon">Search</string>
    <string name="user_profile_image">User Profile Image</string>
</resources>