<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UploadRecipeFragment">

    <View
        android:id="@+id/topBackground"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@drawable/curved_background_vector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/chef_hat_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/topBackground"
        android:layout_marginTop="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/questionTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/what_did_you_cook_today"
        app:boxStrokeWidth="0dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/logoImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/questionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:inputType="text"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/underline"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/questionTextInputLayout"
        app:layout_constraintStart_toStartOf="@id/questionTextInputLayout"
        app:layout_constraintEnd_toEndOf="@id/questionTextInputLayout"
        android:layout_marginTop="4dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mealDescriptionLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/meal_description"
        app:boxBackgroundColor="@color/light_beige"
        app:boxStrokeWidth="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/underline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mealDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:gravity="top"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/instructionsLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="16dp"
        android:hint="@string/meal_instructions"
        app:boxBackgroundColor="@color/light_beige"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mealDescriptionLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/instructionsEditText"
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:background="@null"
            android:gravity="top"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/addPhotoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instructionsLayout">

        <ImageView
            android:id="@+id/cameraIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:contentDescription="@string/add_photo"
            android:focusable="true"
            android:src="@drawable/ic_camera"
            app:tint="@color/theme_orange" />

        <TextView
            android:id="@+id/addPhotoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_add_photo"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/gray"
            android:visibility="visible" />
    </LinearLayout>

    <ImageView
        android:id="@+id/recipeImagePreview"
        android:layout_width="276dp"
        android:layout_height="157dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/image_placeholder"
        android:contentDescription="@string/recipe_image_preview"
        android:visibility="gone"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.703"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/postButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/theme_orange"
        android:clickable="true"
        android:focusable="true"
        android:minWidth="120dp"
        android:text="@string/post"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
